--- a/app/views/activities/description.html.erb
+++ b/app/views/activities/description.html.erb
@@ -1,2 +1,79 @@
-<h1>Activities#description</h1>
-<p>Find me in app/views/activities/description.html.erb</p>
+<!-- Create Package Section -->
+<div class="row">
+  <div class="col s12">
+
+    <div class="card-panel">
+
+      <%= render 'create_activity_menu' %>
+
+      <div class="card-content">
+        <div class="container">
+          <div id="details">
+              <div class="row">
+                <h5 class="center">Activity Details Section</h5>
+                  <%= form_for @activity, class: "col s12" do |f| %>
+                      <div class="row">
+                        <h6>About</h6>
+                        <div class="input-field col s12">
+                          <%= f.text_area :description, id: "desc-text", class: "materialize-textarea" %>
+                          <span class="helper-text">Enter an introduction about this activity</span>
+                        </div><!-- input-field -->
+                      </div><!-- row -->
+                      <div class="row">
+                        <h6>Pricing</h6>
+                        <div class="input-field col s12">
+                          <%= f.text_area :price-details, id: "details-text", class: "materialize-textarea" %>
+                          <span class="helper-text">Enter pricing information about this activity</span>
+                        </div><!-- input-field -->
+                      </div><!-- row -->
+                      <br/>
+                      <br/>
+                      <hr/>
+                      <br/>
+                      <br/>
+                      <div class="row">
+                        <h6>How to get there</h6>
+                        <div class="input-field col s12">
+                          <%= f.text_area :how_to_directions, id: "direction-text", class: "materialize-textarea" %>
+                          <span class="helper-text">Enter text information on how to get to location.</span>
+                        </div><!-- input-field -->
+                      </div><!-- row -->
+                      <div class="row">
+                        <h6>How to secure your seats</h6>
+                        <div class="input-field col s12">
+                          <%= f.text_area :how_to_seats, id: "secure-seats-text", class: "materialize-textarea" %>
+                          <span class="helper-text">Enter text information on how to secure seats.</span>
+                        </div><!-- input-field -->
+                      </div><!-- row -->
+                      <div class="row">
+                        <h6>Additional Information</h6>
+                        <div class="input-field col s12">
+                          <%= f.text_area :activity_info, id: "add-information-text", class: "materialize-textarea" %>
+                          <span class="helper-text">Add more information about this reservation, leave blank if not required.</span>
+                        </div><!-- input-field -->
+                      </div><!-- row -->
+                      <div class="row">
+                        <h6>Cancellation &amp; Refund Policies</h6>
+                        <div class="input-field col s12">
+                          <%= f.text_area :refund_policies, id: "refund-policies-text", class: "materialize-textarea" %>
+                          <span class="helper-text">Add cancellation &amp; refund policies for this activity.</span>
+                        </div><!-- input-field -->
+                      </div><!-- row -->
+
+                      <div class="row">
+                        <div class="col s12">
+                          <%= button_tag type: "submit", class: "btn waves-effect waves-light", name: "action" do %>
+                            Update<span><i class="material-icons right">update</i></span>
+                          <% end %>
+                        </div><!-- col -->
+                      </div><!-- row -->
+
+                  <% end %>
+              </div><!-- row -->
+          </div><!-- details -->
+
+        </div><!-- container -->
+      </div><!-- card-content -->
+    </div><!-- card-panel -->
+  </div><!-- col -->
+</div><!-- row -->
