--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,2 +1,89 @@
-<h1>Activities#show</h1>
-<p>Find me in app/views/activities/show.html.erb</p>
+<!-- Page Banner -->
+
+<div class="row">
+  <div class="col s12">
+    <%= image_tag ('page-banner.jpg'), class: "responsive-img" %>
+  </div><!-- col -->
+</div><!-- row -->
+
+
+<!-- Page Title & Details-->
+
+<div class="row">
+  <div class="col s12 center">
+    <h3 class="activity-title"><%= @activity.name %></h3>
+  </div><!-- col -->
+</div><!-- row -->
+
+<!-- ACTIVITIES DETAILS -->
+
+<div class="row">
+  <div class="col s12 l7">
+
+    <div class="row">
+      <div class="col s12">
+        <h4>About</h4>
+        <p><%= @activity.description %></p>
+      </div><!-- col -->
+    </div><!-- row -->
+
+    <div class="row">
+      <div class="col s12">
+        <h5><%= icon('fas', 'list-ul', 'Pricing Details') %></h5>
+        <p><%= @activity.details %></p>
+      </div><!-- col -->
+    </div><!-- row -->
+
+    <hr/>
+
+    <div class="row">
+      <div class="col s12">
+        <h4><%= icon('fas', 'directions', 'How to get there?') %></h4>
+        <p><%= @activity.how_to_directions %></p>
+      </div><!-- col -->
+    </div><!-- row -->
+
+    <div class="row">
+      <div class="col s12">
+        <h4><%= icon('far', 'question-circle', 'How to secure your seats?') %></h4>
+        <p><%= @activity.how_to_seats %></p>
+      </div><!-- col -->
+    </div><!-- row -->
+
+    <div class="row">
+      <div class="col s12">
+        <h4><%= icon('fas', 'info-circle', 'Additional Information') %></h4>
+        <p><%= @activity.activity_info %></p>
+      </div><!-- col -->
+    </div><!-- row -->
+
+    <div class="row">
+      <div class="col s12">
+        <h4><%= icon('fas', 'exclamation-circle', 'Cancellation & Refund Policies') %></h4>
+        <p><%= @activity.refund_policies %></p>
+      </div><!-- col -->
+    </div><!-- row -->
+
+  </div><!-- col -->
+
+    <%= render 'reservations/form' %>
+
+</div><!-- row -->
+
+<hr/>
+
+<div class="row">
+  <div class="col s12">
+    <h4><%= icon('fas', 'map-marked', 'Location') %></h4>
+    <h6><%= @activity.location_title %></h6>
+    <div class="card">
+        <br/>
+        <br/>
+        <br/>
+        <h1 class="center">GOOGLE MAP KAT SINI</h1>
+        <br/>
+        <br/>
+        <br/>
+    </div><!-- card -->
+  </div><!-- col -->
+</div><!-- row -->
