--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,38 @@
-<h2>Change your password</h2>
+<div class="row">
+  <div class="col s10 offset-s1">
+    <div class="card-panel">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+      <h2 class="center">Change your password</h2>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render 'shared/devisemes' %>
+        <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+        <div class="input-field">
+          <%= f.label :password, "New password" %><br />
+          <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+          <% end %>
+          <%= f.password_field :password, autofocus: true, autocomplete: "new-password", id: "password", type: "password", class: "validate" %>
+        </div><!-- input-field -->
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
+        <div class="input-field">
+          <%= f.label :password_confirmation, "Confirm new password" %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "off", id: "password", type: "password", class: "validate" %>
+        </div><!-- input-field -->
 
-<%= render "devise/shared/links" %>
+        <div class="input-field">
+          <%= f.label :current_password %><br />
+          <%= f.password_field :current_password, autocomplete: "new-password", id: "password", type: "password", class: "validate" %>
+        </div><!-- input-field -->
+
+        <div class="actions">
+          <%= button_tag type: "submit", class: "btn waves-effect waves-light", name: "action" do %>
+            Update<span><i class="material-icons right">update</i></span>
+          <% end %>
+        </div><!-- actions -->
+
+      <% end %>
+    </div><!-- card-panel -->
+  </div><!-- col -->
+</div><!-- row -->
