--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,60 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="row">
+  <div class="col s10 offset-s1">
+    <div class="card-panel">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+      <h2 class="center">Edit Profile</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render 'shared/devisemes' %>
+
+        <div class="input-field">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "email", type: "email", class: "validate" %>
+        </div><!-- input-field -->
+
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
+
+        <div class="input-field">
+          <%= f.label :fullname %><br />
+          <%= f.text_field :fullname, autofocus: true, autocomplete: "fullname", id: "fullname", type: "text" %>
+          <span class="helper-text">Full name max 15 characters</span>
+        </div><!-- input-field -->
+
+        <div class="input-field">
+          <%= f.label :password %><br />
+          <%= f.password_field :password, autocomplete: "new-password", id: "password", type: "password", class: "validate" %>
+          <span class="helper-text">Don't want to change it? Leave it..</span>
+          <% if @minimum_password_length %>
+            <br />
+            <em><%= @minimum_password_length %> characters minimum</em>
+          <% end %>
+        </div><!-- input-field -->
+
+        <div class="input-field">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", id: "password", type: "password", class: "validate" %>
+        </div><!-- input-field -->
+
+        <div class="input-field">
+          <%= f.label :current_password %><br />
+          <%= f.password_field :current_password, autocomplete: "new-password", id: "password", type: "password", class: "validate" %>
+        </div><!-- input-field -->
+
+        <br/>
+
+        <div class="actions">
+          <%= button_tag type: "submit", class: "btn waves-effect waves-light", name: "action" do %>
+            Update<span><i class="material-icons right">update</i></span>
+          <% end %>
+        </div><!-- actions -->
+      <% end %>
+
+      <br/>
+
+      <%= link_to "Back", :back %>
+
+    </div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
