--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,49 @@
-<h2>Sign up</h2>
+<div class="row">
+  <div class="col s10 offset-s1">
+    <div class="card-panel">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+      <h2 class="center">Sign up</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render 'shared/devisemes' %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+        <div class="input-field">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "email", type: "email", class: "validate" %>
+        </div><!-- input-field -->
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+        <div class="input-field">
+          <%= f.label :fullname %><br />
+          <%= f.text_field :fullname, autofocus: true, autocomplete: "fullname", id: "fullname", type: "text" %>
+          <span class="helper-text">Full name max 15 characters</span>
+        </div><!-- input-field -->
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+        <div class="input-field">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "new-password", id: "password", type: "password", class: "validate" %>
+        </div><!-- input-field -->
 
-<%= render "devise/shared/links" %>
+        <div class="input-field">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", id: "password", type: "password", class: "validate" %>
+        </div><!-- input-field -->
+
+        <div class="actions">
+          <%= button_tag type: "submit", class: "btn waves-effect waves-light", name: "action" do %>
+            Submit<span><i class="material-icons right">send</i></span>
+          <% end %>
+        </div><!-- actions -->
+
+        <div class="card-action">
+          <br/>
+          <%= link_to 'Log In', new_user_session_path %>
+        </div><!-- card-action -->
+
+    </div><!-- card-panel -->
+    <% end %>
+
+  </div><!-- col -->
+</div><!-- row -->
