Initiated modal jquery

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -58,6 +58,11 @@
               edge: 'right'
             });
 
+            //Initiate Modal
+            $(document).ready(function(){
+              $('.modal').modal();
+            });
+
 
         });
     </script>
