--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -87,3 +87,15 @@
     </div><!-- card -->
   </div><!-- col -->
 </div><!-- row -->
+
+<div class="row">
+  <div class="col s12">
+    <h3>
+      <%= pluralize(@guest_reviews.count, "Review") %>
+      <span id="average_rating"></span>
+    </h3>
+    <div class="container">
+      <div><%= render "reviews/review_list" %></div>
+    </div><!-- container -->
+  </div><!-- col -->
+</div><!-- row -->
