Fixed spelling error on line 25

--- a/app/views/activities/description.html.erb
+++ b/app/views/activities/description.html.erb
@@ -22,7 +22,7 @@
                       <div class="row">
                         <h6>Pricing</h6>
                         <div class="input-field col s12">
-                          <%= f.text_area :price-details, id: "details-text", class: "materialize-textarea" %>
+                          <%= f.text_area :price_details, id: "details-text", class: "materialize-textarea" %>
                           <span class="helper-text">Enter pricing information about this activity</span>
                         </div><!-- input-field -->
                       </div><!-- row -->
