--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -76,14 +76,20 @@
   <div class="col s12">
     <h4><%= icon('fas', 'map-marked', 'Location') %></h4>
     <h6><%= @activity.location_title %></h6>
-    <div class="card">
-        <br/>
-        <br/>
-        <br/>
-        <h1 class="center">GOOGLE MAP KAT SINI</h1>
-        <br/>
-        <br/>
-        <br/>
-    </div><!-- card -->
+    <div class="row">
+      <div id="map" style="width: 100%; height: 400px;"></div>
+      <script src="https://maps.googleapis.com/maps/api/js"></script>
+      <script>
+        function initialize() {
+          var location = {lat: <%= @activity.latitude %>, lng: <%= @activity.longitude %>};
+          var map = new google.maps.Map(document.getElementById('map'), {
+            center: location,
+            zoom: 14
+          });
+        }
+
+        google.maps.event.addDomListener(window, 'load', initialize);
+      </script>
+    </div><!-- row -->
   </div><!-- col -->
 </div><!-- row -->
