--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -75,7 +75,7 @@
 <div class="row">
   <div class="col s12">
     <h4><%= icon('fas', 'map-marked', 'Location') %></h4>
-    <h6><%= @activity.location_title %></h6>
+    <h6><%= @activity.location_title %></h6><br/>
     <div class="row">
       <div id="map" style="width: 100%; height: 400px;"></div>
       <script src="https://maps.googleapis.com/maps/api/js"></script>
