Created HTML template for home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,34 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<!--Images Slider-->
+<section class="slider">
+  <ul class="slides">
+    <li>
+      <img src="img/eagle-square-slider.jpg" alt="eagle-square">
+      <div class="caption center-align">
+          <h2>Plan Your Dream Vacation</h2>
+      </div>
+    </li>
+    <li>
+      <img src="img/second-slider.jpg" alt="second-slider">
+      <div class="caption left-align">
+          <h2>Budget Friendly Plans</h2>
+      </div>
+    </li>
+    <li>
+      <img src="img/third-slider.jpg" alt="third-slider">
+      <div class="caption right-align">
+          <h2>Friends &amp; Family Getaways</h2>
+      </div>
+    </li>
+  </ul>
+</section><!-- slider -->
+
+<!-- Best Price Section -->
+<div class="container">
+  <div class="row">
+  	<div class="container deal-intro">
+  		<h2 class="black-text best-price-title">Our Best Price!</h2>
+  		<p class="black-text best-price-p">We have the best prices available online! Bring your family and friends together to
+  		<a href="#" class="red-text darken-4">#Langkawi</a> no matter how much your budget is!</p>
+  	</div><!-- container -->
+  </div><!-- row -->
+</div><!-- container -->
