Modified home pages with some embedded ruby

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,12 +23,38 @@
 </section><!-- slider -->
 
 <!-- Best Price Section -->
-<div class="container">
-  <div class="row">
-  	<div class="container deal-intro">
-  		<h2 class="black-text best-price-title">Our Best Price!</h2>
-  		<p class="black-text best-price-p">We have the best prices available online! Bring your family and friends together to
-  		<a href="#" class="red-text darken-4">#Langkawi</a> no matter how much your budget is!</p>
-  	</div><!-- container -->
-  </div><!-- row -->
-</div><!-- container -->
+<div class="row">
+	<div class="container deal-intro">
+		<h2 class="black-text best-price-title">Our Best Price!</h2>
+		<p class="black-text best-price-p">We have the best prices available online! Bring your family and friends together to
+		<a href="#" class="red-text darken-4">#Langkawi</a> no matter how much your budget is!</p>
+	</div><!-- container -->
+</div><!-- row -->
+
+<!-- Activities and Packages Cards -->
+<div class="row">
+  <% @activities.each do |activity| %>
+    <div class="col s12 m6">
+        <div class="card sticky-action">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="img/mangrove-tour-card.jpg" alt="mangrove-tour">
+            </div><!-- card-image -->
+            <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4"><%= @activity.name %><i class="material-icons right">more_vert</i></span>
+                <p>MYR<%= @activity.my_adult_price %>! <span class="grey-text text-lighten-1"><del>MYR<%= @activity.full_price %></del></span></p>
+            </div><!-- card-content -->
+            <div class="card-action">
+                <%= button_tag type: "submit", class: "btn-small red pulse", name: "action" do %>
+                  BOOK NOW!
+                <% end %>
+            </div><!-- card-action -->
+            <div class="card-reveal">
+                <span class="card-title activator grey-text text-darken-4"><%= @activity.name %><i class="material-icons right">close</i></span>
+                <p>
+                  <%= @activity.description %>
+                </p>
+            </div><!-- card-reveal -->
+        </div><!-- card -->
+    </div><!-- col -->
+  <% end %>
+</div><!-- row -->
