--- a/app/views/activities/photos.html.erb
+++ b/app/views/activities/photos.html.erb
@@ -22,7 +22,7 @@
                     <input type="file" multiple>
                 </div><!-- btn -->
                 <div class="file-path-wrapper">
-                    <input class="file-path validate" type="text" placeholder="Upload one or more photos">
+                    <%= f.text_field :photos, multiple: true, class: "file-path validate", type: "text", placeholder: "Upload one or more photos" %>
                 </div><!-- file-path-wrapper -->
               </div><!-- file input-field -->
 
