--- a/app/views/activities/photos.html.erb
+++ b/app/views/activities/photos.html.erb
@@ -13,18 +13,10 @@
             <%= form_for @activity do |f| %>
               <h5 class="center">Upload photos for slider and banner</h5>
               <br/>
-              <br/>
-              <br/>
-              <p>First photo will be used as banner image, upload multiple to make a photo slider.</p>
-              <div class="file-field input-field">
-                <div class="btn">
-                    <span>Upload</span>
-                    <input type="file" multiple>
-                </div><!-- btn -->
-                <div class="file-path-wrapper">
-                    <%= f.text_field :photos, multiple: true, class: "file-path validate", type: "text", placeholder: "Upload one or more photos" %>
-                </div><!-- file-path-wrapper -->
-              </div><!-- file input-field -->
+              <p>First photo will be used as banner image, upload multiple to make a photo slider. Make sure to rename those photos to '1.jpg', '2.jpg' etc..</p>
+              <div class="input-field">
+                <%= f.file_field :images, multiple: true, type: "file" %>
+              </div><!-- file input-field --></br>
 
               <div class="row">
                 <div class="col s12">
