--- a/app/views/reservations/your_reservations.html.erb
+++ b/app/views/reservations/your_reservations.html.erb
@@ -7,11 +7,13 @@
             <% activity.reservations.each do |reservation| %>
               <li>
                 <div class="collapsible-header">
-                  <%= reservation.arrival.strftime("%d/%m/%Y") %> | <%= reservation.activity.name %>
+                  <%= reservation.created_at.strftime("%d/%m/%Y") %> | <%= reservation.activity.name %>
                 </div><!-- collapsible-header -->
                 <div class="collapsible-body">
                   <p>Guest Name: <%= reservation.user.fullname %></p>
                   <p>Guest Email: <%= reservation.user.email %></p>
+                  <p>Phone No: +6019-515 7067</p>
+                  <p>Arrival Date: <%= reservation.arrival.strftime("%d/%m/%Y") %></p>
                   <p>Adult: <%= reservation.my_adult_count %></p>
                   <p>Child: <%= reservation.my_child_count %></p><hr/><br/>
                   <p>Total: MYR<%= reservation.total %></p>
