Added users phone number field to registration form

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,6 +19,12 @@
         </div><!-- input-field -->
 
         <div class="input-field">
+          <%= f.label :phone_number %><br />
+          <%= f.text_field :phone_number, autofocus: true, autocomplete: "phone-number", id: "phone-number", type: "number" %>
+          <span class="helper-text">Optional: Please enter your phone number.</span>
+        </div><!-- input-field -->
+
+        <div class="input-field">
           <%= f.label :password %>
           <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
