--- a/app/views/reservations/your_reservations.html.erb
+++ b/app/views/reservations/your_reservations.html.erb
@@ -1,3 +1,17 @@
+<!-- SEARCH FILTER -->
+<div class="row">
+  <div class="col s12">
+    <div class="card">
+      <div class="card-content">
+        <h5 class="center">Reservation List</h5>
+        <p class="center">Use the date selection to filter the results</p>
+
+      </div><!-- card-content -->
+    </div><!-- card -->
+  </div><!-- col -->
+</div><!-- row -->
+
+<!-- RESERVATION LIST -->
 <div class="row">
   <div class="col s12">
     <div class="card">
@@ -43,5 +57,13 @@
 <script>
   $(document).ready(function(){
     $('.collapsible').collapsible();
+  });
+  $('#search_arrival').datepicker({
+    dateFormat: 'dd-mm-yy',
+    onSelect: function(selected) {
+
+      $('#btn-search').attr('disabled', false);
+
+    }
   });
 </script>
