Modified show page to display images from activestorage

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col s12">
-    <%= image_tag ('page-banner.jpg'), class: "responsive-img" %>
+    <%= image_tag @activity.images[0], class: "responsive-img" %>
   </div><!-- col -->
 </div><!-- row -->
 
