--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -25,8 +25,7 @@
           <ul>
             <li><%= link_to 'Login', new_user_session_path %></li>
             <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-            <li><%= link_to 'BuyTickets.my', 'https://www.facebook.com/buyticketsmy' %></li>
-            <li><%= link_to 'Instagram', 'https://www.instagram.com' %></li>
+            <li><%= link_to 'Manage Reservations', your_reservations_path %></li>
           </ul>
         </div>
       </div>
