Rendered main sliders

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 
     <%= render 'shared/navbar' %>
     <%= render 'shared/message' %>
+    <%= render 'shared/slider' %>
 
     <div class="container">
       <%= yield %>
