--- a/app/views/shared/_slider.html.erb
+++ b/app/views/shared/_slider.html.erb
@@ -1,8 +1,10 @@
 <!-- SLIDER -->
-<div class="slider">
-	<ul class="slides">
-    <li><%= image_tag("sliders/slider1.jpeg") %></li>
-    <li><%= image_tag("sliders/slider2.jpeg") %></li>
-    <li><%= image_tag("sliders/slider3.jpeg") %></li>
-	</div><!-- slides -->
-</div><!-- slider -->
+<div class="row">
+	<div class="slider">
+		<ul class="slides">
+	    <li><%= image_tag("sliders/slider1.jpeg") %></li>
+	    <li><%= image_tag("sliders/slider2.jpeg") %></li>
+	    <li><%= image_tag("sliders/slider3.jpeg") %></li>
+		</div><!-- slides -->
+	</div><!-- slider -->
+</div><!-- row -->
