--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,95 +1,95 @@
-<!-- Page Banner -->
+<div class="container">
+  <!-- Page Banner -->
+  <div class="row">
+    <div class="col s12">
+      <%= image_tag @activity.images[0], class: "responsive-img" %>
+    </div><!-- col -->
+  </div><!-- row -->
 
-<div class="row">
-  <div class="col s12">
-    <%= image_tag @activity.images[0], class: "responsive-img" %>
-  </div><!-- col -->
-</div><!-- row -->
 
+  <!-- Page Title & Details-->
+  <div class="row">
+    <div class="col s12 center">
+      <h3 class="activity-title"><%= @activity.name %></h3>
+    </div><!-- col -->
+  </div><!-- row -->
 
-<!-- Page Title & Details-->
+  <!-- ACTIVITIES DETAILS -->
 
-<div class="row">
-  <div class="col s12 center">
-    <h3 class="activity-title"><%= @activity.name %></h3>
-  </div><!-- col -->
-</div><!-- row -->
+  <div class="row">
+    <div class="col s12 l7">
 
-<!-- ACTIVITIES DETAILS -->
+      <div class="row">
+        <div class="col s12">
+          <h4>About</h4>
+          <p><%= @activity.description %></p>
+        </div><!-- col -->
+      </div><!-- row -->
 
-<div class="row">
-  <div class="col s12 l7">
+      <div class="row">
+        <div class="col s12">
+          <h5><%= icon('fas', 'list-ul', 'Pricing Details') %></h5>
+          <p><%= @activity.price_details %></p>
+        </div><!-- col -->
+      </div><!-- row -->
 
-    <div class="row">
-      <div class="col s12">
-        <h4>About</h4>
-        <p><%= @activity.description %></p>
-      </div><!-- col -->
-    </div><!-- row -->
+      <hr/>
 
-    <div class="row">
-      <div class="col s12">
-        <h5><%= icon('fas', 'list-ul', 'Pricing Details') %></h5>
-        <p><%= @activity.price_details %></p>
-      </div><!-- col -->
-    </div><!-- row -->
+      <div class="row">
+        <div class="col s12">
+          <h4><%= icon('fas', 'directions', 'How to get there?') %></h4>
+          <p><%= @activity.how_to_directions %></p>
+        </div><!-- col -->
+      </div><!-- row -->
 
-    <hr/>
+      <div class="row">
+        <div class="col s12">
+          <h4><%= icon('far', 'question-circle', 'How to secure your seats?') %></h4>
+          <p><%= @activity.how_to_seats %></p>
+        </div><!-- col -->
+      </div><!-- row -->
 
-    <div class="row">
-      <div class="col s12">
-        <h4><%= icon('fas', 'directions', 'How to get there?') %></h4>
-        <p><%= @activity.how_to_directions %></p>
-      </div><!-- col -->
-    </div><!-- row -->
+      <div class="row">
+        <div class="col s12">
+          <h4><%= icon('fas', 'info-circle', 'Additional Information') %></h4>
+          <p><%= @activity.activity_info %></p>
+        </div><!-- col -->
+      </div><!-- row -->
 
-    <div class="row">
-      <div class="col s12">
-        <h4><%= icon('far', 'question-circle', 'How to secure your seats?') %></h4>
-        <p><%= @activity.how_to_seats %></p>
-      </div><!-- col -->
-    </div><!-- row -->
+      <div class="row">
+        <div class="col s12">
+          <h4><%= icon('fas', 'exclamation-circle', 'Cancellation & Refund Policies') %></h4>
+          <p><%= @activity.refund_policies %></p>
+        </div><!-- col -->
+      </div><!-- row -->
 
-    <div class="row">
-      <div class="col s12">
-        <h4><%= icon('fas', 'info-circle', 'Additional Information') %></h4>
-        <p><%= @activity.activity_info %></p>
-      </div><!-- col -->
-    </div><!-- row -->
+    </div><!-- col -->
 
-    <div class="row">
-      <div class="col s12">
-        <h4><%= icon('fas', 'exclamation-circle', 'Cancellation & Refund Policies') %></h4>
-        <p><%= @activity.refund_policies %></p>
-      </div><!-- col -->
-    </div><!-- row -->
+      <%= render 'reservations/form' %>
 
-  </div><!-- col -->
+  </div><!-- row -->
 
-    <%= render 'reservations/form' %>
+  <hr/>
 
-</div><!-- row -->
+  <div class="row">
+    <div class="col s12">
+      <h4><%= icon('fas', 'map-marked', 'Location') %></h4>
+      <h6><%= @activity.location_title %></h6><br/>
+      <div class="row">
+        <div id="map" style="width: 100%; height: 400px;"></div>
+        <script src="https://maps.googleapis.com/maps/api/js"></script>
+        <script>
+          function initialize() {
+            var location = {lat: <%= @activity.latitude %>, lng: <%= @activity.longitude %>};
+            var map = new google.maps.Map(document.getElementById('map'), {
+              center: location,
+              zoom: 14
+            });
+          }
 
-<hr/>
-
-<div class="row">
-  <div class="col s12">
-    <h4><%= icon('fas', 'map-marked', 'Location') %></h4>
-    <h6><%= @activity.location_title %></h6><br/>
-    <div class="row">
-      <div id="map" style="width: 100%; height: 400px;"></div>
-      <script src="https://maps.googleapis.com/maps/api/js"></script>
-      <script>
-        function initialize() {
-          var location = {lat: <%= @activity.latitude %>, lng: <%= @activity.longitude %>};
-          var map = new google.maps.Map(document.getElementById('map'), {
-            center: location,
-            zoom: 14
-          });
-        }
-
-        google.maps.event.addDomListener(window, 'load', initialize);
-      </script>
-    </div><!-- row -->
-  </div><!-- col -->
-</div><!-- row -->
+          google.maps.event.addDomListener(window, 'load', initialize);
+        </script>
+      </div><!-- row -->
+    </div><!-- col -->
+  </div><!-- row -->
+</div><!-- container -->
