--- a/app/views/carentals/index.html.erb
+++ b/app/views/carentals/index.html.erb
@@ -1,17 +1,19 @@
-<div class="row">
-  <div class="col s12">
-    <div class="card">
-      <div class="card-content">
-        <br/>
-        <h3 class="center">Unfortunately..</h3>
-        <br/>
-        <p class="center">Car rentals are coming in your way. But they are taking some time to arrive here..
-        Please sign up with us, once they are ready we will let you know! For the time being, please take a look at our amazing activity offers!</p>
-        <br/>
-        <hr/>
-        <br/>
-        <%= link_to 'BACK HOME', root_path, class: "btn-small red center" %>
-      </div><!-- card-content -->
-    </div><!-- card -->
-  </div><!-- col -->
-</div><!-- row -->
+<div class="container">
+  <div class="row">
+    <div class="col s12">
+      <div class="card">
+        <div class="card-content">
+          <br/>
+          <h3 class="center">Unfortunately..</h3>
+          <br/>
+          <p class="center">Car rentals are coming in your way. But they are taking some time to arrive here..
+          Please sign up with us, once they are ready we will let you know! For the time being, please take a look at our amazing activity offers!</p>
+          <br/>
+          <hr/>
+          <br/>
+          <%= link_to 'BACK HOME', root_path, class: "btn-small red center" %>
+        </div><!-- card-content -->
+      </div><!-- card -->
+    </div><!-- col -->
+  </div><!-- row -->
+</div><!-- container -->
