--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,29 +1,31 @@
-<div class="row">
-  <div class="col s10 offset-s1">
-    <div class="card-panel">
+<div class="container">
+  <div class="row">
+    <div class="col s10 offset-s1">
+      <div class="card-panel">
 
-      <div class="center">
-        <h3>Forgot your password?</h3>
-        <p>Enter your email and we'll send you instructions</p>
+        <div class="center">
+          <h3>Forgot your password?</h3>
+          <p>Enter your email and we'll send you instructions</p>
+        </div>
+
+        <br/>
+
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <%= render 'shared/devisemes' %>
+
+          <div class="input-field">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "email", type: "email", class: "validate" %>
+          </div><!-- input-field -->
+
+          <div class="actions">
+            <%= button_tag type: "submit", class: "btn waves-effect waves-light", name: "action" do %>
+              Submit<span><i class="material-icons right">send</i></span>
+            <% end %>
+          </div><!-- actions -->
+
+        <% end %>
       </div>
-
-      <br/>
-
-      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-        <%= render 'shared/devisemes' %>
-
-        <div class="input-field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "email", type: "email", class: "validate" %>
-        </div><!-- input-field -->
-
-        <div class="actions">
-          <%= button_tag type: "submit", class: "btn waves-effect waves-light", name: "action" do %>
-            Submit<span><i class="material-icons right">send</i></span>
-          <% end %>
-        </div><!-- actions -->
-
-      <% end %>
     </div>
   </div>
 </div>
