--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,51 +1,53 @@
-<div class="row">
-  <div class="col s10 offset-s1">
-    <div class="card-panel">
+<div class="container">
+  <div class="row">
+    <div class="col s10 offset-s1">
+      <div class="card-panel">
 
-      <h2 class="center">Sign up</h2>
+        <h2 class="center">Sign up</h2>
 
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= render 'shared/devisemes' %>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render 'shared/devisemes' %>
 
-        <div class="input-field">
-          <p>Email</p>
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "email", type: "email", class: "validate" %>
-        </div><!-- input-field --><br/>
+          <div class="input-field">
+            <p>Email</p>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "email", type: "email", class: "validate" %>
+          </div><!-- input-field --><br/>
 
-        <div class="input-field">
-          <p>Full Name</p>
-          <%= f.text_field :fullname, autofocus: true, autocomplete: "fullname", id: "fullname", type: "text" %>
-        </div><!-- input-field --><br/>
+          <div class="input-field">
+            <p>Full Name</p>
+            <%= f.text_field :fullname, autofocus: true, autocomplete: "fullname", id: "fullname", type: "text" %>
+          </div><!-- input-field --><br/>
 
-        <div class="input-field">
-          <p>Phone Number</p>
-          <%= f.text_field :phone_number, autofocus: true, autocomplete: "phone-number", id: "phone-number", type: "number" %>
-          <span class="helper-text">Optional: Please enter your phone number.</span>
-        </div><!-- input-field --><br/>
+          <div class="input-field">
+            <p>Phone Number</p>
+            <%= f.text_field :phone_number, autofocus: true, autocomplete: "phone-number", id: "phone-number", type: "number" %>
+            <span class="helper-text">Optional: Please enter your phone number.</span>
+          </div><!-- input-field --><br/>
 
-        <div class="input-field">
-          <p>Password</p>
-          <%= f.password_field :password, autocomplete: "new-password", id: "password", type: "password", class: "validate" %>
-        </div><!-- input-field --><br/>
+          <div class="input-field">
+            <p>Password</p>
+            <%= f.password_field :password, autocomplete: "new-password", id: "password", type: "password", class: "validate" %>
+          </div><!-- input-field --><br/>
 
-        <div class="input-field">
-          <p>Confirm Password</p>
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", id: "password", type: "password", class: "validate" %>
-        </div><!-- input-field --><br/>
+          <div class="input-field">
+            <p>Confirm Password</p>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", id: "password", type: "password", class: "validate" %>
+          </div><!-- input-field --><br/>
 
-        <div class="actions">
-          <%= button_tag type: "submit", class: "btn waves-effect waves-light", name: "action" do %>
-            Submit<span><i class="material-icons right">send</i></span>
-          <% end %>
-        </div><!-- actions -->
+          <div class="actions">
+            <%= button_tag type: "submit", class: "btn waves-effect waves-light", name: "action" do %>
+              Submit<span><i class="material-icons right">send</i></span>
+            <% end %>
+          </div><!-- actions -->
 
-        <div class="card-action">
-          <br/>
-          <%= link_to 'Log In', new_user_session_path %>
-        </div><!-- card-action -->
+          <div class="card-action">
+            <br/>
+            <%= link_to 'Log In', new_user_session_path %>
+          </div><!-- card-action -->
 
-    </div><!-- card-panel -->
-    <% end %>
+      </div><!-- card-panel -->
+      <% end %>
 
-  </div><!-- col -->
-</div><!-- row -->
+    </div><!-- col -->
+  </div><!-- row -->
+</div><!-- container -->
