--- a/app/views/reservations/your_activities.html.erb
+++ b/app/views/reservations/your_activities.html.erb
@@ -1,20 +1,22 @@
-<div class="row">
-  <div class="col s12">
-    <div class="card">
-      <div class="card-content">
-        <span class="card-title">Your Activities</span>
-        <div class="row">
-          <% @bookings.each do |booking| %>
-          <div class="col s4">
-            <%= booking.arrival.strftime("%d/%m/%Y") %>
-          </div><!-- col -->
-          <div class="col s8">
-            <%= link_to booking.activity.name, activity_path(booking.activity) %>
-          </div><!-- col -->
-          <br/>
-          <% end %>
-        </div><!-- row -->
-      </div><!-- card-content -->
-    </div><!-- card -->
-  </div><!-- col -->
-</div><!-- row -->
+<div class="container">
+  <div class="row">
+    <div class="col s12">
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">Your Activities</span>
+          <div class="row">
+            <% @bookings.each do |booking| %>
+            <div class="col s4">
+              <%= booking.arrival.strftime("%d/%m/%Y") %>
+            </div><!-- col -->
+            <div class="col s8">
+              <%= link_to booking.activity.name, activity_path(booking.activity) %>
+            </div><!-- col -->
+            <br/>
+            <% end %>
+          </div><!-- row -->
+        </div><!-- card-content -->
+      </div><!-- card -->
+    </div><!-- col -->
+  </div><!-- row -->
+</div><!-- container -->
