--- a/app/views/reservations/your_reservations.html.erb
+++ b/app/views/reservations/your_reservations.html.erb
@@ -1,58 +1,60 @@
 <!-- SEARCH FILTER -->
-<div class="row">
-  <div class="col s12">
-    <div class="card">
-      <div class="card-content">
-        <h5 class="center">Reservation List</h5>
-        <p class="center">Use the date selection to filter the results</p>
+<div class="container">
+  <div class="row">
+    <div class="col s12">
+      <div class="card">
+        <div class="card-content">
+          <h5 class="center">Reservation List</h5>
+          <p class="center">Use the date selection to filter the results</p>
 
-      </div><!-- card-content -->
-    </div><!-- card -->
-  </div><!-- col -->
-</div><!-- row -->
+        </div><!-- card-content -->
+      </div><!-- card -->
+    </div><!-- col -->
+  </div><!-- row -->
 
-<!-- RESERVATION LIST -->
-<div class="row">
-  <div class="col s12">
-    <div class="card">
-      <div class="card-content">
-        <ul class="collapsible popout">
-          <% @activities.each do |activity| %>
-            <% activity.reservations.each do |reservation| %>
-              <li>
-                <div class="collapsible-header">
-                  Name: <%= reservation.user.fullname %> | Created at: <%= reservation.created_at.strftime("%d/%m/%Y") %> | Status: <% if reservation.Waiting? %>
-                                                                                                                                        <span class="new badge red" data-badge-caption=""><%= reservation.status %></span>
-                                                                                                                                      <% elsif reservation.Approved? %>
-                                                                                                                                        <span class="new badge green" data-badge-caption=""><%= reservation.status %></span>
-                                                                                                                                        <% else %>
-                                                                                                                                          <span class="new badge grey" data-badge-caption=""><%= reservation.status %></span>
-                                                                                                                                        <% end %>
-                </div><!-- collapsible-header -->
-                <div class="collapsible-body">
-                  <h5>Activity Name: <%= reservation.activity.name %> </h5>
-                  <p>Guest Email: <%= reservation.user.email %></p>
-                  <p>Phone No: <%= reservation.user.phone_number %></p>
-                  <p>Arrival Date: <%= reservation.arrival.strftime("%d/%m/%Y") %></p>
-                  <p>Adult: <%= reservation.my_adult_count %></p>
-                  <p>Child: <%= reservation.my_child_count %></p><hr/><br/>
-                  <p>Total: MYR <%= reservation.total %></p><br/>
-                  Payment Status: <br/>
-                  <div class="input-field inline">
-                    <% if reservation.Waiting? %>
-                      <%= link_to approve_reservation_path(reservation), method: :post do %> <i class="fa fa-thumbs-up fa-lg"></i> <% end %> |
-                      <%= link_to decline_reservation_path(reservation), method: :post do %> <i class="fa fa-thumbs-down fa-lg"></i> <% end %>
-                    <% end %>
-                  </div><!-- input-field inline -->
-                </div><!-- collapsible-body -->
-              </li>
+  <!-- RESERVATION LIST -->
+  <div class="row">
+    <div class="col s12">
+      <div class="card">
+        <div class="card-content">
+          <ul class="collapsible popout">
+            <% @activities.each do |activity| %>
+              <% activity.reservations.each do |reservation| %>
+                <li>
+                  <div class="collapsible-header">
+                    Name: <%= reservation.user.fullname %> | Created at: <%= reservation.created_at.strftime("%d/%m/%Y") %> | Status: <% if reservation.Waiting? %>
+                                                                                                                                          <span class="new badge red" data-badge-caption=""><%= reservation.status %></span>
+                                                                                                                                        <% elsif reservation.Approved? %>
+                                                                                                                                          <span class="new badge green" data-badge-caption=""><%= reservation.status %></span>
+                                                                                                                                          <% else %>
+                                                                                                                                            <span class="new badge grey" data-badge-caption=""><%= reservation.status %></span>
+                                                                                                                                          <% end %>
+                  </div><!-- collapsible-header -->
+                  <div class="collapsible-body">
+                    <h5>Activity Name: <%= reservation.activity.name %> </h5>
+                    <p>Guest Email: <%= reservation.user.email %></p>
+                    <p>Phone No: <%= reservation.user.phone_number %></p>
+                    <p>Arrival Date: <%= reservation.arrival.strftime("%d/%m/%Y") %></p>
+                    <p>Adult: <%= reservation.my_adult_count %></p>
+                    <p>Child: <%= reservation.my_child_count %></p><hr/><br/>
+                    <p>Total: MYR <%= reservation.total %></p><br/>
+                    Payment Status: <br/>
+                    <div class="input-field inline">
+                      <% if reservation.Waiting? %>
+                        <%= link_to approve_reservation_path(reservation), method: :post do %> <i class="fa fa-thumbs-up fa-lg"></i> <% end %> |
+                        <%= link_to decline_reservation_path(reservation), method: :post do %> <i class="fa fa-thumbs-down fa-lg"></i> <% end %>
+                      <% end %>
+                    </div><!-- input-field inline -->
+                  </div><!-- collapsible-body -->
+                </li>
+              <% end %>
             <% end %>
-          <% end %>
-        </ul>
-      </div><!-- card-content -->
-    </div><!-- card -->
-  </div><!-- col -->
-</div><!-- row -->
+          </ul>
+        </div><!-- card-content -->
+      </div><!-- card -->
+    </div><!-- col -->
+  </div><!-- row -->
+</div><!-- container -->
 
 <script>
   $(document).ready(function(){
