--- a/app/views/shared/_devisemes.html.erb
+++ b/app/views/shared/_devisemes.html.erb
@@ -1,7 +1,9 @@
-<% unless resource.errors.empty? %>
-  <script type="text/javascript">
-    <% resource.errors.full_messages.each do |value| %>
-      toastr.error('<%= value %>')
-    <% end %>
-  </script>
-<% end %>
+<div class="container">
+  <% unless resource.errors.empty? %>
+    <script type="text/javascript">
+      <% resource.errors.full_messages.each do |value| %>
+        toastr.error('<%= value %>')
+      <% end %>
+    </script>
+  <% end %>
+</div>
