--- a/app/views/shared/_message.html.erb
+++ b/app/views/shared/_message.html.erb
@@ -1,8 +1,10 @@
-<% unless flash.empty? %>
-  <script type="text/javascript">
-    <% flash.each do |key, value| %>
-      <% type = key.to_s.gsub('alert', 'error').gsub('notice', 'success') %>
-      toastr['<%= type %>']('<%= value %>')
-    <% end %>
-  </script>
-<% end %>
+<div class="container">
+  <% unless flash.empty? %>
+    <script type="text/javascript">
+      <% flash.each do |key, value| %>
+        <% type = key.to_s.gsub('alert', 'error').gsub('notice', 'success') %>
+        toastr['<%= type %>']('<%= value %>')
+      <% end %>
+    </script>
+  <% end %>
+</div><!-- container -->
